# CT-PET_Study_Selection

./: .gitattributes  .gitignore  AGENTS.md  PLAN_STUDY_SELECTION.md  README.md  pyproject.toml
configs/: selection.yaml
docs/: README_STUDY_SELECTION_REVIEW.md
legacy/: dicom_reorganizer.py  exploring_reports.ipynb  run_dicom_reorganizer.py
legacy/Radiology_reports_extraction_pipeline/: extract_data.py  extract_data_only_PET.py  extraction_prompt.py  extraction_prompt_diagnostic_PET.py  gradient_bq.ipynb  gradient_data_works.ipynb  gradient_pt_ct_all_cts_query.sql  gradient_pt_ct_all_pairs_query.sql  gradient_pt_ct_combined_query.sql  gradient_pt_ct_count_query.sql  lung-wo-query.sql  merge_radiology_reports.py  openai_helper.py
legacy/docs/: DICOM_REORGANIZER_README.md
legacy/old_studies_collection/: README.md  load_firebase.py  match_dicom.py  merge_pet_batch.py  run_merge_pet_batch.py
legacy/utils/: batch_rename.py  upload_gradient_gcs.py  verify_newlines_firebase.py
prompts/: ct_extraction_prompt.txt  pet_extraction_prompt.txt
sql/: petct_candidate_pairs.sql
src/gradient_selection/: __init__.py  bq.py  cli.py  config.py  extraction.py  llm.py  logging_utils.py  selection.py
src/gradient_selection.egg-info/: PKG-INFO
